[package]
name = "cycler"
version = "0.2.0"
authors = ["buzzec <buzzec@buzzec.net"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simultainious write/read data structure"
homepage = "https://github.com/Buzzec/cycler"
repository = "https://github.com/Buzzec/cycler"
readme = "README.md"
categories = ["data-structures"]
keywords = ["multithread"]
exclude = [
    ".idea/*"
]

[dependencies]
parking_lot = { version = "0.11.1", features = ["send_guard"] }

[features]
default = ["allow_unsafe", "unsafe_cleanup"]
# This feature allows the use of code that involves unsafe.
# This can be disabled for assurance that all code is safe.
allow_unsafe = []
# This feature allows cleaning of data with unsafe code.
# Without this memory leaks will exist when a RwLockCycler is dropped.
unsafe_cleanup = ["allow_unsafe"]
